# buckspay-sdk

./: .gitignore  .markdown-link-check.json  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  typedoc.json  typedoc.tsconfig.json
.changeset/: config.json  email-signer.md  mainnet-enablement.md  mainnet-ga.md  nextjs-binding.md  policy-account-adapter.md  session-manager.md  session-policy-module.md  social-signer.md  sp2-batch-core.md  sp2-gas-in-token-core.md  sp2-scaffolding.md  sp2-sprint5-react-native.md  sp2-swaps.md
.github/workflows/: ci.yml  docs.yml  e2e.yml  security.yml
docs/: README.md  docs.json  index.mdx
docs/api/: README.md
docs/api-reference/: index.mdx  openapi.json
docs/concepts/: account-models.mdx  facilitator-and-bff.mdx  gasless-on-stellar.mdx  (+2 more)
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
presentation/: buckspay-sdk-explicado.html
scripts/: audit-scope-hash.sh  check-contract-decisions.sh  check-contract-provenance.sh  check-cutover-runbook.sh  check-doc-snippets.mjs  check-docs-no-internal-refs.sh  check-exports.mjs  check-feature-docs.sh  check-licenses.mjs  check-no-committed-env.sh  check-no-regression.sh  check-no-secrets-in-src.sh  check-pin-parity.sh  check-threat-model.sh  check-tsconfig.mjs  check-turbo.mjs  postprocess-sdk-reference.mjs  release-gate.sh  sync-doc-snippets.mjs  verify-wasm-hash.mjs
spikes/passkey-contract/contract/: Cargo.toml  README.md
spikes/passkey-contract/contract/src/: lib.rs
(+369 files in other folders)
